<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/query_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="25sp"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translate"/>

    <TextView
        android:id="@+id/translate_textView"
        style="@style/ResultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/basic"/>

    <TextView
        android:id="@+id/basic_textView"
        style="@style/ResultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/web"/>

    <TextView
        android:id="@+id/web_textView"
        style="@style/ResultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>